--- a/README.rdoc
+++ b/README.rdoc
@@ -23,11 +23,5 @@ There are (or at least we pretend to add :-) another examples in the examples/ f
 
 == Roadmap and TO-DO list
 
-* {Check out the wiki page}[http://wiki.github.com/webco/tuiter]
-
-== Current Status
-
-Tuiter is currently being extracted from Tuitersfera and transformed into a full-fledged Ruby library.
-
-Stay in tune for updates!
+Check out the library roadmap and to-do list {in the wiki}[http://wiki.github.com/webco/tuiter]
 
