Updating AUTHORS. Giving credit where is due

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,8 +7,11 @@ Both projects were latter adopted by WebCo Internet (http://webcointernet.com).
 
 The authors and contributors of Tuiter are:
 
-* Manoel Lemos  (manoel@lemos.net)
-* Luiz Rocha    (lsdr@lsdr.net)
-* Luis Cipriani (lfcipriani@talleye.com)
-* Lucas Húngaro (lucashungaro@gmail.com)
+* Manoel Lemos    (manoel@lemos.net) - initial work
+* Celestino Gomes (tinorj@gmail.com)
+* Leandro Silva   (leandrodoze@gmail.com)
+* Lucas Fais      (lfais@webcointernet.com)
+* Lucas Húngaro   (lucashungaro@gmail.com)
+* Luis Cipriani   (lfcipriani@talleye.com)
+* Luiz Rocha      (lsdr@lsdr.net)
 
