Added github profile path on AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,17 +1,17 @@
-Tuiter was design and developed by Manoel Lemos (manoel@lemos.net), to provide
+Tuiter was design and developed by Manoel Lemos (manoel@lemos.net - http://www.github.com/mlemos), to provide
 basic access to the Twitter API. It was developed for the experimental project
 called Tuitersfera Brasil (http://tuitersfera.com.br), an application to
 monitor the Twitter usage in Brazil.
 
-Both projects were latter adopted by WebCo Internet (http://webcointernet.com).
+Both projects were latter adopted by WebCo Internet (http://webcointernet.com - http://www.github.com/webco).
 
 The authors and contributors of Tuiter are:
 
-* Manoel Lemos    (manoel@lemos.net) - initial work
-* Celestino Gomes (tinorj@gmail.com)
-* Leandro Silva   (leandrodoze@gmail.com)
-* Lucas Fais      (lfais@webcointernet.com)
-* Lucas Húngaro   (lucashungaro@gmail.com)
-* Luis Cipriani   (lfcipriani@talleye.com)
-* Luiz Rocha      (lsdr@lsdr.net)
+* Manoel Lemos    (manoel@lemos.net - http://www.github.com/mlemos) - initial work
+* Celestino Gomes (tinorj@gmail.com - http://www.github.com/tinogomes)
+* Leandro Silva   (leandrodoze@gmail.com - http://www.github.com/leandrosilva)
+* Lucas Fais      (lfais@webcointernet.com - http://www.github.com/lucasfais)
+* Lucas Húngaro   (lucashungaro@gmail.com - http://www.github.com/lucashungaro)
+* Luis Cipriani   (lfcipriani@talleye.com - http://www.github.com/lfcipriani)
+* Luiz Rocha      (lsdr@lsdr.net - http://www.github.com/lsdr)
 
