doing that thing I always forget, changelog!

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,11 +7,12 @@ Both projects were latter adopted by WebCo Internet (http://webcointernet.com - 
 
 The authors and contributors of Tuiter are:
 
-* Manoel Lemos    (manoel@lemos.net - http://www.github.com/mlemos) - initial work
-* Celestino Gomes (tinorj@gmail.com - http://www.github.com/tinogomes)
-* Leandro Silva   (leandrodoze@gmail.com - http://www.github.com/leandrosilva)
-* Lucas Fais      (lfais@webcointernet.com - http://www.github.com/lucasfais)
-* Lucas Húngaro   (lucashungaro@gmail.com - http://www.github.com/lucashungaro)
-* Luis Cipriani   (lfcipriani@talleye.com - http://www.github.com/lfcipriani)
-* Luiz Rocha      (lsdr@lsdr.net - http://www.github.com/lsdr)
+* Manoel Lemos    (manoel@lemos.net - http://github.com/mlemos) - initial work
+* Celestino Gomes (tinorj@gmail.com - http://github.com/tinogomes)
+* Leandro Silva   (leandrodoze@gmail.com - http://github.com/leandrosilva)
+* Lucas Fais      (lfais@webcointernet.com - http://github.com/lucasfais)
+* Lucas Húngaro   (lucashungaro@gmail.com - http://github.com/lucashungaro)
+* Luis Cipriani   (lfcipriani@talleye.com - http://github.com/lfcipriani)
+* Luiz Rocha      (lsdr@lsdr.net - http://github.com/lsdr)
+* Thomaz Leite    (thomaz@leite.me - http://github.com/thomaz)
 
